[package]
name = "blog-image"
version = "0.1.0"
authors = ["Amy Keibler <wanderingelf14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
eyre = "0.6.8"
color-eyre = "0.6.2"
rusttype = "0.9.3"
toml = "0.8.0"
serde = { version = "1.0.164", features = ["derive"] }
rand = "0.8.5"
slug = "0.1.4"
conv = "0.3.3"

