[package]
name = "blog-image"
version = "0.1.0"
authors = ["Amy Keibler <wanderingelf14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
imageproc = "0.23.0"
eyre = "0.6.12"
color-eyre = "0.6.3"
rusttype = "0.9.3"
toml = "0.8.12"
serde = { version = "1.0.164", features = ["derive"] }
rand = "0.8.5"
slug = "0.1.5"
conv = "0.3.3"

